--- a/product_task_caroline.ipynb
+++ b/product_task_caroline.ipynb
@@ -31,9 +31,9 @@
     "\n",
     "### Description\n",
     "\n",
-    "Prompt: We now want to flush out our idea a bit more. Can you give me a short description of the product that is to the point?\n",
+    "**Prompt:** We now want to flush out our idea a bit more. Can you give me a short description of the product that is to the point?\n",
     "\n",
-    "Gemini: The Smart Dog Collar is a technologically advanced wearable device for dogs, designed to monitor and promote their overall health and well-being. Much like a smartwatch for humans, this collar tracks essential health metrics such as **heart rate**, **activity levels** (steps and distance), and **sleep patterns**.\n",
+    "**Gemini:** The Smart Dog Collar is a technologically advanced wearable device for dogs, designed to monitor and promote their overall health and well-being. Much like a smartwatch for humans, this collar tracks essential health metrics such as **heart rate**, **activity levels** (steps and distance), and **sleep patterns**.\n",
     "\n",
     "The data collected by the collar is transmitted wirelessly to a user-friendly mobile app, providing owners with real-time insights into their dog's health. This allows for proactive monitoring and helps owners ensure their pets are staying active and healthy, ultimately improving their quality of life.\n",
     "\n",
@@ -41,9 +41,9 @@
     "\n",
     "### Names\n",
     "\n",
-    "Prompt: Can you come up with a product name for this product?\n",
+    "**Prompt:** Can you come up with a product name for this product?\n",
     "\n",
-    "Gemini: I can definitely help with that. Here are some potential product names for your smart dog collar, categorized by style:\n",
+    "**Gemini:** I can definitely help with that. Here are some potential product names for your smart dog collar, categorized by style:\n",
     "\n",
     "Modern & Tech-Focused\n",
     "* **PawTrak**\n",
@@ -70,9 +70,9 @@
     "\n",
     "### Slogans\n",
     "\n",
-    "Prompt: Now can you come up with a couple slogans for our product?\n",
+    "**Prompt:** Now can you come up with a couple slogans for our product?\n",
     "\n",
-    "Gemini: That's a great next step. A good slogan can be a powerful way to communicate your product's value.\n",
+    "**Gemini:** That's a great next step. A good slogan can be a powerful way to communicate your product's value.\n",
     "\n",
     "Here are a few options for slogans, categorized by the feeling or message they convey.\n",
     "\n",
@@ -103,9 +103,9 @@
    "source": [
     "## Features\n",
     "\n",
-    "Prompt: What sort of features do you think this product would have?\n",
+    "**Prompt:** What sort of features do you think this product would have?\n",
     "\n",
-    "Gemini: Based on the concept of a smart dog collar, here are some features that would be essential to the product, broken down into what the collar does and what the app does.\n",
+    "**Gemini:** Based on the concept of a smart dog collar, here are some features that would be essential to the product, broken down into what the collar does and what the app does.\n",
     "\n",
     "Collar Features\n",
     "\n",
@@ -137,9 +137,9 @@
    "source": [
     "## Marketing\n",
     "\n",
-    "Prompt: How do you suggest we go about marketing this product? \n",
+    "**Prompt:** How do you suggest we go about marketing this product? \n",
     "\n",
-    "Gemini: Marketing a smart dog collar requires a multi-pronged approach that targets a specific audience and highlights the key benefits. Here are some strategies to consider:\n",
+    "**Gemini:** Marketing a smart dog collar requires a multi-pronged approach that targets a specific audience and highlights the key benefits. Here are some strategies to consider:\n",
     "\n",
     "1. Identify and Target Your Audience\n",
     "Your primary customers are not the dogs, but the dog owners. You need to identify and understand the different types of dog owners you want to reach.\n",
